<resources>
    <string name="app_name">Wifi Locator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="bouton_capturer">Capturer</string>
    <string name="label_captures">Captures</string>
    <string name="label_prefixe">Préfixe fichier sauvegarde</string>
    <string name="bouton_estimer_lieu">Estimer le lieu</string>
    <string name="label_texte_lieu_estime">Lieu estimé</string>
    <string name="bouton_balise_plus_proche">Balise la plus proche</string>
    <string name="bouton_estimer_position">Estimer la position</string>
    <string name="label_position_estimee">Position estimée</string>
    <string name="bouton_exporter">Exporter</string>
    <string name="bouton_importer">Importer</string>
    <string name="title_activity_training">TrainingActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chercher">Chercher</string>
    <string name="importExportActivityButtonText">Import / Export</string>
    <string name="measureActivityButtonText">Prendre des mesures</string>
    <string name="testButtonActivityText">Tester</string>
    <string name="estimationActivityButtonText">Nouvelle Estimation</string>
    <string name="instantane">Instantanée</string>
    <string name="cinqsecondes">5 s</string>
    <string name="dixsecondes">10 s</string>
    <string name="lieu">Lieu</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="fingerprintManagerActivityButtonText">Gérer les données</string>
</resources>
