<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EstimationActivity">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/label_texte_lieu_estime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/entree_lieu_estimation"
            android:text="@string/label_texte_lieu_estime" />

        <EditText
            android:id="@+id/entree_lieu_estimation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:targetApi="o" />
        <!--android:inputType="textPersonName" />-->

        <Button
            android:id="@+id/bouton_estimer_lieu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bouton_estimer_lieu" />

        <TextView
            android:id="@+id/label_position_estimee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/entree_position_estimation"
            android:text="@string/label_position_estimee" />

        <EditText
            android:id="@+id/entree_position_estimation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:targetApi="o" />

        <Button
            android:id="@+id/bouton_estimer_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bouton_estimer_position" />
        <!--tools:ignore="LabelFor" />-->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">


        <TextView
            android:id="@+id/label_prefixe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/entree_prefix"
            android:text="@string/label_prefixe" />

        <EditText
            android:id="@+id/entree_prefix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:targetApi="o" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>